RegExpSupport/testData/psi/test2.regexp
1*<error descr="Dangling metacharacter">*</error>